# CUPIDApi

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  changelog.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: endpoints.py  response_docs.py
app/config/: config.yaml  model_config.py
app/libs/: cupid_features.py  cupid_models.py
app/models/: schemas.py
app/services/: data_processor.py  model_trainer.py  model_tuner.py  predictor.py  room_matcher.py
app/utils/: auth.py  config_loader.py  helper.py  logger.py  model_loader.py  model_reloader.py
data/: new_training_data.json  vectorizer.pkl
mlmodels/: xgb_model.json
notebooks/: check.ipynb  data.ipynb  eda.ipynb  eda2.ipynb  llm_data.ipynb  model.ipynb  model2.ipynb.ipynb  new_data_training.ipynb  validate.ipynb
reports/: report.html
tests/: conftest.py  test_data_processor.py  test_endpoints.py  test_model_trainer.py  test_room_matcher.py
